chore: fixes heading alignment in Safari
Breaks in Chrome due to 3px discrepancy. Problem for another day.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,7 +39,7 @@
 }
 
 .bar.hero h1 {
-  bottom: -0.2em;
+  bottom: -0.22em;
   margin-bottom: 0;
   position: absolute;
   font-size: 5em;
@@ -48,7 +48,7 @@
 .box-simple h3 {
   color: #fff;
   font-size: 2.5em;
-  margin-top: -1.08em;
+  margin-top: -1.03em;
 }
 
 .box-simple img {
